--- a/base/lesson6.html
+++ b/base/lesson6.html
@@ -128,7 +128,7 @@
 
     <!-- Модальное окно для изображений -->
     <div id="imageModal" class="modal">
-        <span class="close">&times;</span>
+        <span class="close">x</span>
         <div class="modal-content">
             <img id="modalImage" class="modal-image" src="" alt="">
             <div class="nav-arrows">
