--- a/advanced/index.html
+++ b/advanced/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>eShop</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <div id="app">
@@ -53,7 +53,12 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
-  <script src="components.js"></script>
-  <script src="app.js"></script>
+  <script src="js/models/CartItem.js"></script>
+  <script src="js/cart.js"></script>
+  <script src="js/components/SearchComponent.js"></script>
+  <script src="js/components/CartComponent.js"></script>
+  <script src="js/components/ErrorNotifications.js"></script>
+  <script src="js/components/OrderForm.js"></script>
+  <script src="js/app.js"></script>
 </body>
 </html>
